--- a/docs/styles.css
+++ b/docs/styles.css
@@ -7,13 +7,34 @@
 img {
   border-radius: 8px;
 }
+
+:root {
+  --vocs-color_background: #f3f3f3;
+}
+
+:root.dark {
+  --vocs-color_background: #000000;
+  --vocs-color_backgroundDark: #000000;
+}
+
 .vocs_NavLogo_logoImage {
-  height: auto;
+  height: 100%;
 }
 .vocs_Subtitle {
   white-space: normal !important;
 }
-
+.customBtn {
+  white-space: normal !important;
+  background: transparent !important;
+  border: none !important;
+  display: block !important;
+  height: 100% !important;
+  padding: 0px !important;
+  transition: all 0.2s linear !important;
+}
+.customBtn:hover {
+  transform: scale(1.03);
+}
 .vocs_Sidebar_sectionTitle {
   padding: 0 0.5rem;
 }
@@ -33,4 +54,12 @@ img {
 .vocs_Sidebar_item[data-active="true"] {
   color: var(--vocs-color_textAccent);
   background-color: #40241f0f;
+}
+
+.vocs_Footer {
+  @apply px-[108px] py-0;
+  background-color: #e6e6e6;
+}
+.dark .vocs_Footer {
+  background-color: #1a1a1a;
 }
