background color update

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -9,7 +9,7 @@ img {
 }
 
 :root {
-  --vocs-color_background: #f3f3f3;
+  --vocs-color_background: #ffffff;
   --vocs-color_background4: #d6d6d6;
 }
 
