--- a/docs/styles.css
+++ b/docs/styles.css
@@ -43,9 +43,35 @@ img {
   background: #292929;
 }
 
-.vocs_NavLogo_logoImage {
+/* .vocs_NavLogo_logoImage {
   height: 80%;
+} */
+
+.vocs_Sidebar_logo a {
+  display: flex; /* Make sure the logos and text are in a horizontal line */
+  align-items: center; /* Vertically center the text with the logo */
 }
+
+.vocs_Sidebar_logo a:after {
+  content: "Surge Documentation"; /* Add the text next to the logo */
+  font-size: 16px;
+  font-weight: bold;
+  font: "Inter";
+  color: #fff;
+  margin-left: 10px; /* Adds space between the logo and the text */
+  display: inline-block; /* Ensure the text is displayed inline with the logo */
+  vertical-align: middle; /* Vertically align the text */
+}
+
+.vocs_NavLogo_logoImage {
+  height: 80%; /* Maintain existing logo image height */
+  display: inline-block; /* Ensure the logo images remain inline */
+}
+
+.vocs_DesktopTopNav_logo a > img {
+  content: url("/logo/logo-dark.png");
+}
+
 .vocs_Subtitle {
   white-space: normal !important;
 }
